tests/ui/rfcs/rfc-2632-const-trait-impl/call-const-trait-method-pass.stderr
error: const `impl` for trait `Add` which is not marked with `#[const_trait]`
  --> $DIR/call-const-trait-method-pass.rs:7:12
   |
LL | impl const std::ops::Add for Int {
   |            ^^^^^^^^^^^^^
   |
   = note: marking a trait with `#[const_trait]` ensures all default method bodies are `const`
   = note: adding a non-const method body in the future would be a breaking change

error: const `impl` for trait `PartialEq` which is not marked with `#[const_trait]`
  --> $DIR/call-const-trait-method-pass.rs:15:12
   |
LL | impl const PartialEq for Int {
   |            ^^^^^^^^^
   |
   = note: marking a trait with `#[const_trait]` ensures all default method bodies are `const`
   = note: adding a non-const method body in the future would be a breaking change

error: aborting due to 2 previous errors

